syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.hugovallada";
option java_outer_classname = "PropostaGrpc";
option objc_class_prefix = "HLW";

package com.github.hugovallada;

service CreateProposal {
  rpc send (NewProposalGrpcRequest) returns (NewProposalGrpcResponse) {}
}

message NewProposalGrpcRequest{
  string document = 1;
  string email = 2;
  string name = 3;
  AddressGrpc address = 4;
  string salary = 5;
}

message NewProposalGrpcResponse{
  string idProposal = 1;
}

message AddressGrpc{
  string city = 1;
  string state = 2;
  string number = 3;
  string cep = 4;
  string extension = 5;
}